--- a/Dynmap.html
+++ b/Dynmap.html
@@ -132,7 +132,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <a href="/mainpage.html"><i class="fas fa-map-marked-alt"></i> HOME</a>
+            <a href="/index.html"><i class="fas fa-map-marked-alt"></i> HOME</a>
         </div>
         <button class="menu-toggle"><i class="fas fa-bars"></i></button>
     </nav>
