--- a/ipandport.html
+++ b/ipandport.html
@@ -191,7 +191,7 @@
 
     <!-- Navigation Section -->
     <div class="menu">
-        <a href="/mainpage.html"><i class="fas fa-home"></i> Home</a>
+        <a href="/index.html"><i class="fas fa-home"></i> Home</a>
     </div>
 
     <!-- IP Details Section -->
