--- a/404page.html
+++ b/404page.html
@@ -158,7 +158,7 @@
                     const response = await fetch(`https://api.mcsrvstat.us/2/${serverIP}`);
                     const data = await response.json();
                     if (data.online) {
-                        window.location.href = "/mainpage.html"; // Redirect to main page
+                        window.location.href = "/index.html"; // Redirect to main page
                     }
                 } catch (error) {
                     console.log("Server still offline...");
